# emotion-detection-analysis

./: .env.example  .gitignore  README.md  audio_manager.py  check_deps.py  interface.ipynb  local_emotion.py  openai_client.py  orchestrator.py  pyproject.toml  results.csv  results_logger.py  results_test.csv  sitecustomize.py  test_backend_logs.py  test_librosa.py  test_mp4_loading.py  test_torchaudio.py  verify_logic.py
diarizer/: analyse_speaker_count.py  compare_jsons.py  diarize_openai.py  diarize_pyannote.py  eval_agent_matched_by_reference.csv  eval_caller_duration.csv  eval_caller_segments.csv  eval_fallback_used.csv  eval_manual_listening.csv  eval_num_speakers.csv  eval_output.csv  eval_segment_discrepancies.csv  eval_tables.py  extract_audio.py  generate_segment_comparison.py  opus_analysis_results.md  opus_analysis_results.md.resolved  pyproject.toml  run_batch.py  run_eval_agents.py  run_eval_output.py  run_mapper.py  run_param_tester.py  run_pipeline.py  run_speaker_mapper.py  segment_postprocess.py  speaker_mapping.py
diarizer/out_google/diarized/: conv__+33327866663_20-08-2024_8_58_10.json  conv__+49620363603_28-08-2024_9_28_15.json  conv__+49711621826_06-08-2024_9_06_00.json  conv__+49713215540_06-08-2024_8_40_35.json  conv__+49713216717_05-08-2024_13_44_05.json  conv__+49713217388_06-09-2024_8_44_04.json
diarizer/out_google/index/: conv__+33327866663_20-08-2024_8_58_10.summary.json  conv__+49620363603_28-08-2024_9_28_15.summary.json  conv__+49711621826_06-08-2024_9_06_00.summary.json  conv__+49713215540_06-08-2024_8_40_35.summary.json  (+2 more)
diarizer/run_batch_scripts/: audio_io.py  role_assign.py  segment_postprocess.py
diarizer/scripts_core/: diarize_google.py  diarize_pyannote.py  extract_audio.py  role_assign.py  segment_postprocess.py
labeler/: 1_augment_seg_ratings_with_human_data.py  2_aggregate_seg_ratings_to_phase_ratings.py  3_map_emotion_labels_to_frameworks.py  aggregate_seg_ratings_to_phase_ratings.py  analyze_0_consistency.py  analyze_1_segments.py  analyze_2_transitions.py  analyze_3_phases.py  analyze_emodb_accuracy.py  analyze_phases.py  analyze_situations.py  app.py  audio_manager.py  check_evals.py  classify_situations.py  collect_emotion_labels.py  convert_audio.py  create_test_audio.py  eval_consistency.py  generate_emotion_frameworks_report_I2.py  generate_new_set_report_I1.py  local_model_factory.py  local_model_runner.py  local_models.py  openai_client.py  pdf_dump.txt  pyproject.toml  remove_model_predictions.py  results.csv  run_analysis_pipeline.py  run_convert_audio.py  run_emodb.py  run_eval_specific.py  run_eval_specific_local.py  run_local_models.py  run_openai_model.py  run_openai_models.py  run_segmentation.py  runner_state.py  segmentation_utils.py  (+1 more)
labeler/script_helpers/: check_evals.py  collect_emotion_labels.py  eval_consistency.py  extract_all_used_emotions.py  label_phases.py  label_situations.py  remove_model_predictions.py
labeler/scripts_core/: gpt_emotion_extractor.py  openai_client.py  segmentation_utils.py
separator/: audio_io.py  pyproject.toml  run_sepformer.py  run_sepformer_chunking_backup.py  run_sepformer_chunking_gpu.py  sepformer.ipynb  test_chunking.py
(+772 files in other folders)
