[project]
name = "emotion-detection-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "ipywidgets>=8.1.8",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "nest-asyncio>=1.6.0",
    "notebook>=7.5.3",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "openai-agents>=0.9.2",
    "pandas>=3.0.1",
    "pyannote-audio>=4.0.4",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "websockets>=16.0",
]
