[project]
name = "labeler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "aiohttp>=3.13.3",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.2",
    "omegaconf>=2.3.0",
    "pandas==2.3.3",
    "protobuf<5.0.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "speechbrain==1.0.3",
    "streamlit>=1.55.0",
    "torch==2.8.*",
    "torchcodec==0.7.*",
    "transformers>=5.2.0",
    "websockets>=16.0",
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
